# Snake

./: .gitignore  CMakeLists.txt  LICENSE  Snake.sln
Snake/: Bait.cpp  Bait.h  Directions.h  Geometry.h  MenuScreen.cpp  MenuScreen.h  Part.cpp  Part.h  PointCounter.cpp  PointCounter.h  Snake.cpp  Snake.h  Snake.vcxproj  Snake.vcxproj.filters  Spawner.h  Trap.cpp  Trap.h  main.cpp
